[DDW-438]: Update wallet public key api params and add QR code dialog for public key

--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
@@ -6,6 +6,9 @@
   .field {
     &.valueHidden {
       :global {
+        .SimpleFormField_label {
+          pointer-events: none;
+        }
         .SimpleInput_input {
           color: var(--rp-input-text-color-disabled);
           pointer-events: none;
