[DDW-438]: Update wallet public key QR code dialog styles

--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyQRCodeDialog.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyQRCodeDialog.scss
@@ -1,18 +1,23 @@
 .dialog {
+  :global {
+    .Dialog_title {
+      margin-bottom: 0;
+    }
+  }
+
   .walletName {
-    font-family: var(--font-semibold);
+    font-family: var(--font-medium);
     font-size: 12px;
+    font-weight: 500;
     line-height: 1.83;
-    margin-bottom: 20px;
-    margin-top: 7px;
     text-align: center;
+    text-transform: uppercase;
   }
 
   .walletPublicKeyQRCode {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
     margin-top: 20px;
   }
 }
