--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -14,9 +14,6 @@
     }
   }
 
-  &.isLoading {
-  }
-
   &.inactive {
     &:hover {
       input {
@@ -39,8 +36,9 @@
 
   .buttonsWrapper {
     bottom: 10px;
+    cursor: text;
     height: 28px;
-    padding-right: 11px;
+    margin-right: 11px;
     position: absolute;
     right: 1px;
   }
@@ -50,7 +48,6 @@
     border-radius: 3px;
     cursor: pointer;
     height: 28px;
-    margin-left: 11px;
     width: 28px;
     &:hover {
       background-color: var(--theme-button-flat-background-color-hover);
@@ -88,6 +85,7 @@
   }
   .okButton {
     background-color: var(--theme-button-primary-background-color);
+    margin-left: 11px;
     &:hover {
       background-color: var(--theme-button-primary-background-color-hover);
     }
