--- a/source/renderer/app/components/wallet/transactions/TransactionTypeIcon.scss
+++ b/source/renderer/app/components/wallet/transactions/TransactionTypeIcon.scss
@@ -35,6 +35,10 @@
       );
     }
   }
+
+  &.expired {
+    background: var(--theme-transactions-icon-type-failed-background-color);
+  }
 }
 
 .pendingTxnIconWrapper {
