--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -148,4 +148,10 @@
     text-align: right;
     top: 5px;
   }
+
+  :global {
+    .SimpleFormField_label {
+      display: inline-block;
+    }
+  }
 }
