[DDW-438]: Fix wallet public key section styles for japanese locale

--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
@@ -22,6 +22,19 @@
         }
       }
     }
+    &.withBigToggleButton {
+      :global {
+        .SimpleFormField_inputWrapper {
+          & > span {
+            margin-right: 140px;
+
+            .SimpleInput_input {
+              width: calc(100% - 213px);
+            }
+          }
+        }
+      }
+    }
 
     :global {
       .SimpleFormField_inputWrapper {
