DDW-480 Tile view in the delegation center

--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -17,7 +17,16 @@
 
   .bodyTitle {
     @extend %regularLightColorText;
+    display: flex;
     margin: 0 0 10px 20px;
+
+    .leftBodyTitle {
+      flex: 2.4;
+    }
+
+    .rightBodyTitle {
+      flex: 1.6;
+    }
   }
 
   .mainContent {
