DDW-480 Tile view in the delegation center - adding epoch tiles

--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -18,7 +18,8 @@
   .bodyTitle {
     @extend %regularLightColorText;
     display: flex;
-    margin: 0 0 10px 20px;
+    margin: 0 0 10px 0;
+    padding: 0 20px;
 
     .leftBodyTitle {
       flex: 2.4;
