--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -72,7 +72,6 @@
       background-color: var(--theme-button-flat-background-color-disabled);
       border-radius: 4px;
       height: 71px;
-      margin: 0 0 0 10px;
       padding: 25px 11px;
       text-align: center;
       width: 80px;
@@ -93,7 +92,7 @@
       }
 
       .nonDelegatedText,
-      .stakePoolUnknow {
+      .stakePoolUnknown {
         @extend %accentText;
         font-size: 8px;
         line-height: 1.25;
@@ -106,6 +105,14 @@
         letter-spacing: -0.5px;
         line-height: 1.57;
         padding-left: 4px;
+      }
+
+      &:first-child {
+        margin-left: 12px;
+      }
+
+      &:last-child {
+        margin-right: 5px;
       }
     }
 
@@ -229,6 +236,7 @@
 
   .arrow {
     height: 18px;
+    margin-left: -10px;
     opacity: 0.3;
     width: 6px;
 
