DDW-480 Tile view in the delegation center - implementing tile view on Wallet row on Delegation center

--- a/source/renderer/app/components/staking/_stakingConfig.scss
+++ b/source/renderer/app/components/staking/_stakingConfig.scss
@@ -15,6 +15,12 @@
   font-family: var(--font-semibold);
 }
 
+%accentBoldText {
+  @extend %baseTypography;
+  color: var(--theme-staking-font-color-accent);
+  font-family: var(--font-bold);
+}
+
 %regularText {
   @extend %baseTypography;
   color: var(--theme-staking-font-color-regular);
