--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -21,12 +21,6 @@
     border-bottom: 0;
   }
 
-  &:hover {
-    .undelegateActions {
-      opacity: 1 !important;
-    }
-  }
-
   .left {
     display: flex;
     flex: 2.5;
@@ -94,7 +88,7 @@
 
       .nonDelegatedText,
       .stakePoolUnknown {
-        @extend %accentText;
+        @extend %accentBoldText;
         font-size: 8px;
         line-height: 1.25;
         text-transform: uppercase;
@@ -110,6 +104,119 @@
 
       &:last-child {
         margin-right: 0;
+      }
+
+      &.futureStakePoolTileDelegated {
+        background-color: var(--theme-staking-stake-pool-background-color);
+        border: solid 1px var(--theme-staking-stake-pool-border-color);
+        padding: 5px 11px 0 11px;
+
+        .stakePoolTicker {
+          padding-left: 0;
+        }
+
+        .ranking {
+          @extend %accentBoldText;
+          font-size: 20px;
+          font-weight: bold;
+          line-height: 1.2;
+          text-align: center;
+
+          sup {
+            font-family: Verdana;
+            font-size: 14px;
+            margin-left: -1px;
+            position: absolute;
+            top: -2px;
+          }
+        }
+
+        .noDataDash {
+          align-items: center;
+          display: flex;
+          height: 27px;
+          justify-content: center;
+
+          :global {
+            .SVGInline {
+              align-items: center;
+              display: flex;
+              justify-content: center;
+
+              svg {
+                height: 3px;
+                width: 12px;
+
+                path {
+                  fill: var(--theme-staking-stake-pool-grey-color) !important;
+                  opacity: 1 !important;
+                }
+              }
+            }
+          }
+        }
+
+        .saturationBar {
+          background: var(
+            --theme-staking-stake-pool-saturation-background-color
+          );
+          border-radius: 2px;
+          height: 5px;
+          margin: 0 auto;
+          overflow: hidden;
+          position: relative;
+          width: 40px;
+
+          span {
+            border-radius: 2px;
+            bottom: 0;
+            height: inherit;
+            left: 0;
+            position: absolute;
+            top: 0;
+          }
+
+          &.green span {
+            background: var(--theme-staking-stake-pool-saturation-green-color);
+          }
+
+          &.orange span {
+            background: var(--theme-staking-stake-pool-saturation-orange-color);
+          }
+
+          &.red span {
+            background: var(--theme-staking-stake-pool-saturation-red-color);
+          }
+
+          &.yellow span {
+            background: var(--theme-staking-stake-pool-saturation-yellow-color);
+          }
+        }
+
+        .stakePoolRankingIndicator {
+          border-radius: 0 0 4px 4px;
+          height: 5px;
+          margin-left: -12px;
+          margin-top: 9px;
+          width: 80px;
+        }
+      }
+
+      &.futureStakePoolTitleUndelegated,
+      &.futureStakePoolTitleUndefined {
+        background-color: var(--theme-staking-stake-pool-background-color);
+        border: solid 1px var(--theme-staking-stake-pool-border-color);
+        padding: 25px 11px;
+
+        .action {
+          margin-top: 7px;
+        }
+      }
+
+      &:hover {
+        .action {
+          opacity: 1 !important;
+        }
       }
     }
 
@@ -131,72 +238,26 @@
     }
 
     .action {
-      .unknown {
-        font-family: var(--font-bold);
-      }
-    }
-
-    .action {
-      @extend %regularText;
-      font-size: 14px;
-      margin-bottom: 3px;
-      text-align: right;
+      background-color: var(
+        --theme-staking-wallet-row-action-delegate-background-color
+      );
+      border-radius: 0 0 4px 4px;
+      cursor: pointer;
+      height: 22px;
+      margin-left: -12px;
+      margin-top: -21px;
+      opacity: 0;
+      position: absolute;
+      transition: opacity 0.15s ease-in;
+      width: 80px;
 
       > span {
-        display: initial !important;
-        margin-right: 0 !important;
-
-        > div {
-          bottom: calc(73% + var(--rp-bubble-distance, 14px));
-
-          > div {
-            font-size: 13px;
-            left: -30px !important;
-            min-width: 200px !important;
-            padding: 4px 12px;
-            text-align: right !important;
-            white-space: normal !important;
-
-            > span:after {
-              left: calc(
-                100% -
-                  calc(
-                    var(
-                        --rp-bubble-arrow-width,
-                        calc(2 * var(--rp-bubble-arrow-size, 10px))
-                      ) - 2px
-                  ) / 2 - 1px
-              ) !important;
-            }
-          }
-        }
-      }
-    }
-
-    .undelegateActions {
-      opacity: 0;
-      transition: opacity 0.15s ease-in;
-    }
-
-    .stakePoolRankingIndicator {
-      border-radius: 2px;
-      height: 100%;
-      transform: translate(20px);
-      width: 4px;
-    }
-
-    .sandClockIcon {
-      svg {
-        height: 12px;
-        margin-bottom: -1px;
-        margin-right: 4px;
-        width: 12px;
-
-        path {
-          fill: var(
-            --theme-staking-delegation-center-gear-icon-fill-color-active
-          );
-        }
+        @extend %accentText;
+        color: var(--theme-staking-stake-pool-background-color);
+        font-size: 8px;
+        font-weight: bold;
+        line-height: 1.25;
+        text-transform: uppercase;
       }
     }
 
@@ -207,27 +268,6 @@
         path {
         fill: var(--theme-loading-spinner-color);
       }
-    }
-  }
-
-  b {
-    color: var(--theme-link-main-color);
-    cursor: pointer;
-  }
-
-  .actionDelegate {
-    color: var(--theme-staking-wallet-row-action-delegate-text-color);
-    cursor: pointer;
-  }
-
-  .actionUndelegate {
-    color: var(--theme-staking-wallet-row-action-undelegate-text-color);
-    cursor: pointer;
-  }
-
-  :global {
-    .LoadingSpinner_component.LoadingSpinner_medium {
-      margin-top: 10px;
     }
   }
 
