DDW-480 Tile view in the delegation center - updating hover effect for action buttons

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -211,6 +211,14 @@
         .action {
           margin-top: 7px;
         }
+
+        &:hover {
+          padding-top: 15px;
+
+          .action {
+            margin-top: 17px;
+          }
+        }
       }
 
       &:hover {
