DDW-480 Tile view in the delegation center - fixing positioning of sync loader

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -277,6 +277,11 @@
         fill: var(--theme-loading-spinner-color);
       }
     }
+
+    &.isRestoring {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   .arrow {
