DDW-480 Tile view in the delegation center - fixes for hover on tiles

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -271,6 +271,15 @@
   }
 
   &:hover {
+    .futureStakePoolTitleUndelegated,
+    .futureStakePoolTitleUndefined {
+      padding-top: 15px !important;
+
+      .action {
+        margin-top: 17px !important;
+      }
+    }
+
     .action {
       opacity: 1 !important;
     }
