[DDW-438]: Update wallet public key field behavior and qr code box style

--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyQRCodeDialog.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyQRCodeDialog.scss
@@ -19,5 +19,10 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+
+    canvas {
+      border: 4px solid var(--theme-receive-qr-code-background-color);
+      box-sizing: content-box;
+    }
   }
 }
