[DDW-503] Enable stake pool ID selection

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
@@ -30,7 +30,7 @@
       .stakePoolId {
         color: var(--theme-delegation-steps-confirmation-description-color);
         font-family: var(--font-light);
-        line-height: 1.38;
+        user-select: text;
       }
 
       .calculatingFeesLabel {
