DDW-480 Tile view in the delegation center - centering epoch labels

--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -20,15 +20,13 @@
     display: flex;
     margin: 0 0 10px 0;
     padding: 0 20px;
-
-    .leftBodyTitle {
-      flex: 2.5;
-    }
+    justify-content: space-between;
 
     .rightBodyTitle {
       display: flex;
-      flex: 1.5;
-      justify-content: flex-end;
+      justify-content: space-between;
+      padding: 0 30px;
+      width: 360px;
     }
   }
 
