DDW-480 Tile view in the delegation center - adding animation on hover

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -211,6 +211,7 @@
         background-color: var(--theme-staking-stake-pool-background-color);
         border: solid 1px var(--theme-staking-stake-pool-border-color);
         padding: 25px 11px;
+        transition: padding-top 400ms ease-in-out;
 
         .action {
           margin-left: -12px;
@@ -257,7 +258,7 @@
       padding: 0 !important;
       position: absolute;
       text-transform: uppercase;
-      transition: opacity 0.15s ease-in;
+      transition: opacity 0.4s ease-in;
       width: 80px;
     }
 
