--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -1,7 +1,7 @@
 @import '../stakingConfig';
 
 .component {
-  margin: 0 0 20px 20px;
+  margin: 20px 0 20px 20px;
 
   &.isLoading {
     align-items: center;
