[DDW-438]: Update copy wallet buttons style

--- a/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
+++ b/source/renderer/app/components/wallet/settings/WalletPublicKeyField.scss
@@ -69,6 +69,7 @@
   .imageButton,
   .button {
     align-items: center;
+    border-radius: 3px;
     display: flex;
     height: 28px;
     justify-content: center;
