--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -34,6 +34,22 @@
     }
   }
 
+  &.oneButton {
+    :global {
+      input {
+        padding-right: 49px;
+      }
+    }
+  }
+
+  &.twoButtons {
+    :global {
+      input {
+        padding-right: 88px;
+      }
+    }
+  }
+
   .buttonsWrapper {
     bottom: 10px;
     cursor: text;
