[DDW-481] Styling adjustment

--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -94,8 +94,12 @@
   }
   .cancelButton {
     .icon {
-      svg g {
-        fill: var(--theme-button-flat-text-color);
+      svg {
+        height: 10px;
+        width: 10px;
+        g {
+          fill: var(--theme-button-flat-text-color);
+        }
       }
     }
   }
