--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -124,6 +124,13 @@
 
         > div {
           padding: 7px 0 0 0;
+
+          > span {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+          }
         }
 
         .stakePoolTicker {
@@ -179,9 +186,9 @@
           );
           border-radius: 2px;
           height: 5px;
-          margin: 2px auto 0;
+          margin: 46px auto 0;
           overflow: hidden;
-          position: relative;
+          position: absolute;
           width: 40px;
 
           span {
@@ -213,8 +220,8 @@
         .stakePoolRankingIndicator {
           border-radius: 0 0 4px 4px;
           height: 5px;
-          margin-left: -1px;
-          margin-top: 6px;
+          margin-top: 58px;
+          position: absolute;
           width: 80px;
         }
 
@@ -282,7 +289,7 @@
       padding: 0 !important;
       position: absolute;
       text-transform: uppercase;
-      transition: opacity 0.4s ease-in;
+      transition: opacity 0.2s ease-in;
       width: 80px;
     }
 
