DDW-480 Tile view in the delegation center - fixing movements of elements on hover

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -291,6 +291,14 @@
       text-transform: uppercase;
       transition: opacity 0.2s ease-in;
       width: 80px;
+
+      &:hover {
+        background-color: var(--theme-button-primary-background-color-hover);
+      }
+
+      &:active {
+        background-color: var(--theme-button-primary-background-color-active);
+      }
     }
 
     :global {
