--- a/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
@@ -17,6 +17,7 @@
   color: var(--theme-transactions-list-group-date-color);
   font-family: var(--font-regular);
   font-size: 16px;
+  margin-bottom: -10px;
   opacity: 0.5;
   padding: 0 0 0 40px;
 }
