--- a/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
@@ -32,7 +32,10 @@
         border-radius: 3px;
         color: var(--theme-report-issue-connecting-text-color);
         cursor: pointer;
+        font-size: 11px;
+        font-weight: bold;
         height: 21px;
+        line-height: 1.36;
         padding: 3px 18px;
         text-transform: uppercase;
         width: 67px;
@@ -55,7 +58,7 @@
   font-size: 16px;
   margin-bottom: -10px;
   opacity: 0.5;
-  padding: 0 0 0 40px;
+  padding: 20px 20px 0 40px;
 }
 
 .walletName {
