--- a/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletNativeTokensSummary.scss
@@ -41,11 +41,19 @@
         width: 67px;
 
         &:hover {
-          background-color: var(--theme-report-issue-button-background-color-hover);
+          background-color: var(
+            --theme-report-issue-button-background-color-hover
+          );
         }
 
         &:active {
-          background-color: var(--theme-report-issue-button-background-color-active);
+          background-color: var(
+            --theme-report-issue-button-background-color-active
+          );
+        }
+
+        &.disabled {
+          opacity: 0.3;
         }
       }
     }
