--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -60,13 +60,12 @@
     align-items: center;
     display: flex;
     flex: 1.5;
-    justify-content: flex-end;
+    justify-content: space-between;
 
     .stakePoolTile {
       background-color: var(--theme-button-flat-background-color-disabled);
       border-radius: 4px;
       height: 71px;
-      margin: 0 20px;
       padding: 25px 9px;
       text-align: center;
       width: 80px;
