--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -341,6 +341,8 @@
         }
 
         &.futureStakePoolTileDelegated {
+          cursor: pointer;
+
           .stakePoolTicker {
             margin-top: -3px;
           }
