--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -20,7 +20,7 @@
     border: none;
     border-radius: 0;
     box-shadow: none;
-    padding: 0;
+    padding: 10px;
     pointer-events: initial;
     position: initial;
   }
